--- a/.github/workflows/Build Newapi.yml
+++ b/.github/workflows/Build Newapi.yml
@@ -10,6 +10,17 @@ on:
       tag:
         description: '要构建的标签（留空则为最新）'
         required: false
+        type: string
+  workflow_call:
+    inputs:
+      branch:
+        description: '要从 new-api 仓库构建的分支'
+        required: true
+        type: string
+      tag:
+        description: '要构建的标签（留空则为最新）'
+        required: false
+        type: string
 
 jobs:
   push_to_registries:
@@ -23,13 +34,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: fengzaixing401/new-api
-          ref: ${{ inputs.branch || 'main' }}
+          ref: ${{ inputs.branch || github.event.inputs.branch || 'main' }}
           fetch-depth: 0
 
       - name: 获取版本信息
         run: |
-          if [ -n "${{ inputs.tag }}" ]; then
-            git checkout ${{ inputs.tag }}
+          if [ -n "${{ inputs.tag || github.event.inputs.tag }}" ]; then
+            git checkout ${{ inputs.tag || github.event.inputs.tag }}
           fi
           VERSION=$(git describe --tags 2>/dev/null || echo "1.0.0")
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
