--- a/.github/workflows/Check Newapi Update.yml
+++ b/.github/workflows/Check Newapi Update.yml
@@ -38,6 +38,12 @@ jobs:
           fi
           echo "latest_tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
 
+      - name: 创建并推送标签
+        if: steps.check_updates.outputs.has_updates == 'true'
+        run: |
+          git tag ${{ steps.check_updates.outputs.latest_tag }}
+          git push origin ${{ steps.check_updates.outputs.latest_tag }}
+
       - name: 触发 Build Newapi 工作流
         if: steps.check_updates.outputs.has_updates == 'true'
         uses: benc-uk/workflow-dispatch@v1
