--- a/.github/workflows/Check Newapi Update.yml
+++ b/.github/workflows/Check Newapi Update.yml
@@ -46,8 +46,8 @@ jobs:
           if [ -n "$NEW_TAGS" ]; then
             echo "发现新标签，正在同步"
             echo "$NEW_TAGS" | while read -r tag; do
-              git tag $tag upstream/$tag
-              git push origin $tag
+              git fetch upstream refs/tags/$tag:refs/tags/$tag
+              git push origin refs/tags/$tag
             done
             HAS_TAG_UPDATES=true
           else
